src/test/deca/context/invalid/declare-field-twice.deca
// Description:
//    Déclare un attribut deux fois
//
// Resultats:
//    Erreur contextuelle   
//    Ligne 14: The field "x" has already been declared (rule 2.4)
//
// Historique:
//    cree le 16/01/2023

class A {
    int x;
    int x;
}
